Update schedule through Lesson 8 and render website

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -8,44 +8,66 @@ This page includes schedule for the Spring 2026 semester, along with all the ass
 
 ## Block 1: Probability Models
 
-+--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
-| Lesson | Topic                                | BEFORE Class                                                                                                                                                                                                                     | AFTER Class | Graded Events (due dates)                                                                 |
-+========+======================================+==================================================================================================================================================================================================================================+=============+===========================================================================================+
-| 1      | Intro to Generative AI               |                                                                                                                                                                                                                                  | -   GPset 1 |                                                                                           |
-+--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
-| 2      | Intro to Probability                 | -   READ: Section 3.1 Defining Probability, *OpenIntro Statistics*                                                                                                                                                               | -   GPset 2 |                                                                                           |
-|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
-|        |                                      | -   [Reading Guide for Lesson 2](https://notebooklm.google.com/notebook/3233b224-a086-4aeb-8bb5-1412444f7ee9){target="_blank"}                                                                                                   |             |                                                                                           |
-+--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
-| 3      | Conditional Probability, Bayes' Rule | -   READ: Section 3.2 Conditional Probability, *OpenIntro Statistics*                                                                                                                                                            | -   GPset 3 | -   Strengths Activity #1                                                                 |
-|        |                                      |                                                                                                                                                                                                                                  |             | -   [Pre-course AI Questionnaire](https://forms.office.com/r/HxgRECzPw5){target="_blank"} |
-|        |                                      | -   [Reading Guide for Lesson 3](https://notebooklm.google.com/notebook/06a6c546-6916-40cb-a710-a469f0842121){target="_blank"}                                                                                                   |             |                                                                                           |
-+--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
-| 4      | Discrete Random Variables            | -   READ:                                                                                                                                                                                                                        | -   GPset 4 | -   [Group Project Form](https://forms.office.com/r/9L2LJEa8qc){target="_blank"}          |
-|        |                                      |                                                                                                                                                                                                                                  |             | -   HW 1                                                                                  |
-|        |                                      |     -   Section 10.2 Random variables (Intro through 10.2.4), [*Computational Probability and Statistics*](https://ds-usafa.github.io/Quarto-Book/Discrete-Random-Variables.html){target="_blank"}                               |             |                                                                                           |
-|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
-|        |                                      |     -   Section 3.4 (Intro through 3.4.2) Random Variables, *OpenIntro Statistics*                                                                                                                                               |             |                                                                                           |
-|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
-|        |                                      | -   [Reading Guide for Lesson 4](https://notebooklm.google.com/notebook/08abf03d-1d2d-4f78-9447-7c1d115dbf69){target="_blank"}                                                                                                   |             |                                                                                           |
-+--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
-| 5      | Continuous Random Variables          | -   READ:                                                                                                                                                                                                                        | -   GPset 5 |                                                                                           |
-|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
-|        |                                      |     -   Section 11.2 Continuous random variables (Intro through 11.2.2) and 11.3 Moments, [*Computational Probability and Statistics*](https://ds-usafa.github.io/Quarto-Book/Continuous-Random-Variables.html){target="_blank"} |             |                                                                                           |
-|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
-|        |                                      |     -   Section 3.5 Continuous distributions, *OpenIntro Statistics*                                                                                                                                                             |             |                                                                                           |
-|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
-|        |                                      | -   [Reading Guide for Lesson 5](https://notebooklm.google.com/notebook/c18d08c7-f192-4790-96ec-fd32137e30e8){target="_blank"}                                                                                                   |             |                                                                                           |
-+--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
-| 6      | Named Distributions                  | -   READ: Sections 4.2 Geometric distribution, 4.3 Binomial distribution (through 4.3.1), and 4.5 Poisson distribution, *OpenIntro Statistics*                                                                                   | -   GPset 6 | -   Project Individual Task #1                                                            |
-|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
-|        |                                      | -   Reading Guide for Lesson 6                                                                                                                                                                                                   |             |                                                                                           |
-+--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
-| 7      | Normal Distribution                  | -   READ:                                                                                                                                                                                                                        | -   GPset 7 | -   HW 2                                                                                  |
-|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
-|        |                                      |     -   Section 4.1 Normal Distribution, *OpenIntro Statistics*                                                                                                                                                                  |             |                                                                                           |
-|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
-|        |                                      |     -   [Section 13.2.2 Exponential distribution](https://ds-usafa.github.io/Quarto-Book/Named-Continuous-Distributions.html#exponential-distribution){target="_blank"} from *Computational Probability and Statistics*          |             |                                                                                           |
-|        |                                      |                                                                                                                                                                                                                                  |             |                                                                                           |
-|        |                                      | -   Reading Guide for Lesson 7                                                                                                                                                                                                   |             |                                                                                           |
-+--------+--------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
++--------+--------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
+| Lesson | Topic                                | BEFORE Class                                                                                                                                                                                                                                            | AFTER Class | Graded Events (due dates)                                                                 |
++========+======================================+=========================================================================================================================================================================================================================================================+=============+===========================================================================================+
+| 1      | Intro to Generative AI               |                                                                                                                                                                                                                                                         | -   GPset 1 |                                                                                           |
++--------+--------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
+| 2      | Intro to Probability                 | -   READ: Section 3.1 Defining Probability, *OpenIntro Statistics*                                                                                                                                                                                      | -   GPset 2 |                                                                                           |
+|        |                                      |                                                                                                                                                                                                                                                         |             |                                                                                           |
+|        |                                      | -   [Reading Guide for Lesson 2](https://notebooklm.google.com/notebook/3233b224-a086-4aeb-8bb5-1412444f7ee9){target="_blank"}                                                                                                                          |             |                                                                                           |
++--------+--------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
+| 3      | Conditional Probability, Bayes' Rule | -   READ: Section 3.2 Conditional Probability, *OpenIntro Statistics*                                                                                                                                                                                   | -   GPset 3 | -   Strengths Activity #1                                                                 |
+|        |                                      |                                                                                                                                                                                                                                                         |             | -   [Pre-course AI Questionnaire](https://forms.office.com/r/HxgRECzPw5){target="_blank"} |
+|        |                                      | -   [Reading Guide for Lesson 3](https://notebooklm.google.com/notebook/06a6c546-6916-40cb-a710-a469f0842121){target="_blank"}                                                                                                                          |             |                                                                                           |
++--------+--------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
+| 4      | Discrete Random Variables            | -   READ:                                                                                                                                                                                                                                               | -   GPset 4 | -   [Group Project Form](https://forms.office.com/r/9L2LJEa8qc){target="_blank"}          |
+|        |                                      |                                                                                                                                                                                                                                                         |             | -   HW 1                                                                                  |
+|        |                                      |     -   Section 10.2 Random variables (Intro through 10.2.4), [*Computational Probability and Statistics*](https://ds-usafa.github.io/Quarto-Book/Discrete-Random-Variables.html){target="_blank"}                                                      |             |                                                                                           |
+|        |                                      |                                                                                                                                                                                                                                                         |             |                                                                                           |
+|        |                                      |     -   Section 3.4 (Intro through 3.4.2) Random Variables, *OpenIntro Statistics*                                                                                                                                                                      |             |                                                                                           |
+|        |                                      |                                                                                                                                                                                                                                                         |             |                                                                                           |
+|        |                                      | -   [Reading Guide for Lesson 4](https://notebooklm.google.com/notebook/08abf03d-1d2d-4f78-9447-7c1d115dbf69){target="_blank"}                                                                                                                          |             |                                                                                           |
++--------+--------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
+| 5      | Continuous Random Variables          | -   READ:                                                                                                                                                                                                                                               | -   GPset 5 |                                                                                           |
+|        |                                      |                                                                                                                                                                                                                                                         |             |                                                                                           |
+|        |                                      |     -   Section 11.2 Continuous random variables (Intro through 11.2.2) and 11.3 Moments, [*Computational Probability and Statistics*](https://ds-usafa.github.io/Quarto-Book/Continuous-Random-Variables.html){target="_blank"}                        |             |                                                                                           |
+|        |                                      |                                                                                                                                                                                                                                                         |             |                                                                                           |
+|        |                                      |     -   Section 3.5 Continuous distributions, *OpenIntro Statistics*                                                                                                                                                                                    |             |                                                                                           |
+|        |                                      |                                                                                                                                                                                                                                                         |             |                                                                                           |
+|        |                                      | -   [Reading Guide for Lesson 5](https://notebooklm.google.com/notebook/c18d08c7-f192-4790-96ec-fd32137e30e8){target="_blank"}                                                                                                                          |             |                                                                                           |
++--------+--------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
+| 6      | Named Distributions                  | -   READ: Sections 4.2 Geometric distribution, 4.3 Binomial distribution (through 4.3.1), and 4.5 Poisson distribution, *OpenIntro Statistics*                                                                                                          | -   GPset 6 | -   Project Individual Task #1                                                            |
+|        |                                      |                                                                                                                                                                                                                                                         |             |                                                                                           |
+|        |                                      | -   [Reading Guide for Lesson 6](https://notebooklm.google.com/notebook/5aeb5c88-de9a-435b-b93f-4d3a6481e74c){target="_blank"}                                                                                                                          |             |                                                                                           |
++--------+--------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
+| 7      | Normal Distribution                  | -   READ:                                                                                                                                                                                                                                               | -   GPset 7 | -   HW 2                                                                                  |
+|        |                                      |                                                                                                                                                                                                                                                         |             |                                                                                           |
+|        |                                      |     -   Section 4.1 Normal Distribution, *OpenIntro Statistics*                                                                                                                                                                                         |             |                                                                                           |
+|        |                                      |                                                                                                                                                                                                                                                         |             |                                                                                           |
+|        |                                      |     -   [Section 13.2.1 Uniform distribution and 13.2.2 Exponential distribution](https://ds-usafa.github.io/Quarto-Book/Named-Continuous-Distributions.html#exponential-distribution){target="_blank"} from *Computational Probability and Statistics* |             |                                                                                           |
+|        |                                      |                                                                                                                                                                                                                                                         |             |                                                                                           |
+|        |                                      | -   [Reading Guide for Lesson 7](https://notebooklm.google.com/notebook/3e74f22c-0af6-4afe-b5e7-d771b0a01990){target="_blank"}                                                                                                                          |             |                                                                                           |
++--------+--------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-------------------------------------------------------------------------------------------+
+
+ 
+
+## Block 2: Data Wrangling and Visualization
+
++--------+-------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+---------------------------+
+| Lesson | Topic       | BEFORE Class                                                                                                                                                                                                                                          | AFTER Class | Graded Events (due dates) |
++========+=============+=======================================================================================================================================================================================================================================================+=============+===========================+
+| 8      | Data Basics | -   READ:                                                                                                                                                                                                                                             | -   GPset 8 |                           |
+|        |             |                                                                                                                                                                                                                                                       |             |                           |
+|        |             |     -   Chapter 1 Hello data from *Introduction to Modern Stats* *(2e)*                                                                                                                                                                               |             |                           |
+|        |             |                                                                                                                                                                                                                                                       |             |                           |
+|        |             |     -   Chapter 5 Exploring numerical data from *Introduction to Modern Stats* *(2e)*                                                                                                                                                                 |             |                           |
+|        |             |                                                                                                                                                                                                                                                       |             |                           |
+|        |             |     -   ***Note: You may not be able to access the web-native version of Intro to Modern Stats (2nd edition) on MissionNet WiFi. Please use the provided PDF of the textbook (in Teams) or refer to the PDF of the assigned reading in NotebookLM.*** |             |                           |
+|        |             |                                                                                                                                                                                                                                                       |             |                           |
+|        |             | -   [Reading Guide for Lesson 8](https://notebooklm.google.com/notebook/6f92eaad-f39d-44fa-802a-fc4496e533ea){target="_blank"}                                                                                                                        |             |                           |
++--------+-------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+---------------------------+
+| 9      | GR1         | Study! Practice!                                                                                                                                                                                                                                      | Relax!      |                           |
+|        |             |                                                                                                                                                                                                                                                       |             |                           |
+|        |             | -   GR1 will take place on Thursday 29 January (M9) during the common GR time, starting at 0630                                                                                                                                                       |             |                           |
++--------+-------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+---------------------------+
